# shoe_pricer

./: README.md  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  schema.py
backend/routers/: price_history.py  shoes.py  stores.py
backend/services/: database.py  price_alert_service.py  price_history_service.py  shoe_service.py  store_service.py
backend/test/: test.db
backend/tests/: conftest.py  test_shoe.py  test_store.py
