[project]
name = "shoe-pricer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "python-decouple>=3.8",
    "scrapy>=2.12.0",
    "sqlmodel>=0.0.24",
]
